frontend/test/should_pass/edge_016.grg
using edge_model_007;
