frontend/test/should_fail/computations_no_assign_func_method3.grg
using computations_no_assign_func_method3;
